--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,4 +40,6 @@ deploy:
     - if: $CI_COMMIT_TAG
     - if: '$CI_PIPELINE_SOURCE == "web"'
     - if: '$CI_PIPELINE_SOURCE == "chat"'
+  tags:
+    - arvan
 
