--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@babel/core": "^7.10.4",
     "parcel-bundler": "^1.12.4",
+    "sass": "^1.26.10",
     "typescript": "^3.9.6"
   },
   "dependencies": {
