--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,15 @@
 {
-	"presets": ["@babel/preset-env"]
+	"presets": [
+		"@babel/preset-env",
+		["@babel/preset-typescript", { "jsxPragma": "h" }]
+	],
+	"plugins": [
+		[
+			"@babel/plugin-transform-react-jsx",
+			{
+				"pragma": "h",
+				"pragmaFrag": "Fragment"
+			}
+		]
+	]
 }
