--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,7 +19,7 @@ build-dev:
   image: mhart/alpine-node:11
   script:
    - yarn install
-   - sh -c 'CI=false ‌BASE_URL=dev-api.mykaseb.ir yarn build'
+   - CI=false ‌BASE_URL="dev-api.mykaseb.ir" yarn build
    - rm -rf public
    - mv dist dev
   artifacts:
@@ -35,7 +35,7 @@ build-prod:
   image: mhart/alpine-node:11
   script:
    - yarn install
-   - sh -c 'CI=false ‌BASE_URL=api.kaseb.xyz yarn build'
+   - CI=false ‌BASE_URL="api.kaseb.xyz" yarn build
    - rm -rf public
    - mv dist prod
   artifacts:
