--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "my-modules",
-  "version": "1.1.1",
+  "version": "1.2.0",
   "main": "index.js",
   "license": "MIT",
   "scripts": {
     "start": "parcel serve index.html",
     "prod": "parcel build index.html",
-    "build": "parcel build kaseb-xyz/modules.ts kaseb-xyz/styles/main.scss --no-source-maps && node build"
+    "build": "rm -rf dist && parcel build kaseb-xyz/modules.ts kaseb-xyz/styles/main.scss --no-source-maps && node build"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-0",
