--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "my-modules",
-  "version": "1.2.4",
+  "name": "kaseb-modules",
+  "version": "1.2.5",
   "main": "index.js",
   "license": "MIT",
   "scripts": {
