--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "parcel serve index.html",
     "prod": "parcel build index.html",
-    "build": "rm -rf dist && parcel build kaseb-xyz/modules.ts kaseb-xyz/styles/main.scss --no-source-maps && node build"
+    "build": "rm -rf dist && parcel build kaseb-xyz/modules.ts kaseb-xyz/styles/main.scss --no-source-maps --out-dir dist/build && node build"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-0",
