fix build script error on remove directory

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@medv/finder": "^2.0.0",
     "axios": "^0.19.2",
+    "del": "^5.1.0",
     "lodash": "^4.17.19",
     "preact": "^10.4.6"
   },
