--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -55,6 +55,8 @@ deploy-dev:
   script:
     - pip install awscli
     - aws --endpoint-url https://s3.ir-thr-at1.arvanstorage.com s3 cp dev s3://kaseb-module/dist-dev --recursive --acl public-read
+    - pwd
+    - rm -rf dev
   rules:
     - if: $CI_COMMIT_TAG
     - if: '$CI_PIPELINE_SOURCE == "web"'
@@ -68,6 +70,8 @@ deploy-prod:
   script:
     - pip install awscli
     - aws --endpoint-url https://s3.ir-thr-at1.arvanstorage.com s3 cp prod s3://kaseb-module/dist-prod --recursive --acl public-read
+    - pwd
+    - rm -rf prod
   rules:
     - if: $CI_COMMIT_TAG
     - if: '$CI_PIPELINE_SOURCE == "web"'
