--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,6 +14,7 @@ build-dev:
   script:
    - yarn install
    - export BASE_URL=https://api.mykaseb.ir
+   - export TRACK_BASE_URL=https://track.mykaseb.ir
    - CI=false yarn build
    - rm -rf dev
    - mv dist dev
@@ -31,7 +32,7 @@ build-prod:
   script:
    - yarn install
    - export BASE_URL=https://api.kaseb.xyz
-   - echo $BASE_URL
+   - export TRACK_BASE_URL=https://track.kaseb.xyz
    - CI=false yarn build
    - rm -rf prod
    - mv dist prod
